tests/compile-fail/uninit_buffer.stderr
error: Undefined Behavior: reading 16 bytes of memory starting at alloc967, but 12 bytes are uninitialized starting at alloc967+0x4, and this operation requires initialized memory
  --> /home/ubuntu/.rustup/toolchains/miri/lib/rustlib/src/rust/library/core/src/slice/cmp.rs:198:34
   |
LL |         let mut order = unsafe { memcmp(left.as_ptr(), right.as_ptr(), len) as isize };
   |                                  ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ reading 16 bytes of memory starting at alloc967, but 12 bytes are uninitialized starting at alloc967+0x4, and this operation requires initialized memory
   |
   = help: this indicates a bug in the program: it performed an invalid operation, and caused Undefined Behavior
   = help: see https://doc.rust-lang.org/nightly/reference/behavior-considered-undefined.html for further information
           
   = note: inside `<u8 as core::slice::cmp::SliceOrd>::compare` at /home/ubuntu/.rustup/toolchains/miri/lib/rustlib/src/rust/library/core/src/slice/cmp.rs:198:34
   = note: inside `core::slice::cmp::<impl std::cmp::Ord for [u8]>::cmp` at /home/ubuntu/.rustup/toolchains/miri/lib/rustlib/src/rust/library/core/src/slice/cmp.rs:41:9
note: inside `main` at $DIR/uninit_buffer.rs:17:14
  --> $DIR/uninit_buffer.rs:17:14
   |
LL |         drop(slice1.cmp(slice2));
   |              ^^^^^^^^^^^^^^^^^^

note: some details are omitted, run with `MIRIFLAGS=-Zmiri-backtrace=full` for a verbose backtrace

Uninitialized read occurred at offsets 0x4..0x10 into this allocation:
alloc967 (Rust heap, size: 32, align: 8) {
    0x00 │ 41 42 43 44 __ __ __ __ __ __ __ __ __ __ __ __ │ ABCD░░░░░░░░░░░░
    0x10 │ 00 __ __ __ __ __ __ __ __ __ __ __ __ __ __ __ │ .░░░░░░░░░░░░░░░
}

error: aborting due to previous error

